// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controller decorator should add Controller metadata to a class when decorated with @Controller(ControllerOptions) 1`] = `
Array [
  DecoratorFactory {
    "json": false,
    "name": "TestControllerName",
    "path": "/test",
  },
  DecoratorFactory {
    "id": "TestControllerName",
    "type": "ControllerType",
  },
]
`;

exports[`Controller decorator should add Controller metadata to a class when decorated with @Controller(string) 1`] = `
Array [
  DecoratorFactory {
    "json": false,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "id": [Function],
    "type": "ControllerType",
  },
]
`;

exports[`RestController decorator should add Controller metadata to a class when decorated with @RestController(ControllerOptions) 1`] = `
Array [
  DecoratorFactory {
    "json": true,
    "name": "TestControllerName",
    "path": "/test",
  },
  DecoratorFactory {
    "id": "TestControllerName",
    "type": "ControllerType",
  },
]
`;

exports[`RestController decorator should add Controller metadata to a class when decorated with @RestController(string) 1`] = `
Array [
  DecoratorFactory {
    "json": true,
    "name": undefined,
    "path": "/test",
  },
  DecoratorFactory {
    "id": [Function],
    "type": "ControllerType",
  },
]
`;
